# ultraminifyhtml

./: .gitignore  Cargo.toml  LICENSE  README.md  setup.py
.github/workflows/: main.yml  package-release.yml
bench/: README.md  brit_co_fp.html  minify_test.py  requirements2.txt  requirements3.txt
src/: lib.rs
ultraminifyhtml/: __init__.py
